fixed spacing issue on overview page

--- a/src/css/components/DataTable.css
+++ b/src/css/components/DataTable.css
@@ -23,6 +23,7 @@
     text-align: center;
     width: 100%;
     table-layout: fixed;
+    margin-top: 2%;
 }
 
 /* Header CSS */
